--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
     
     <!-- about-coffee -->
 
-    <section id="about" class="about container p-3" style="height: 80vh; overflow: hidden;">
+    <section class="about container p-3" style="height: 80vh; overflow: hidden;">
       <div class="row row-cols-md-2">
         <div class="about-content p-1">
           <h1 class="py-2">About-Us</h1>
           <div class="" style="overflow: auto;">
-            <P>At Malayalis Coffee Company, we bring the authentic flavors of Kerala's coffee culture to coffee lovers worldwide.</P>
+            <P>At Malayalis Coffee Company, we bring the authentic flavours of Kerala's coffee culture to coffee lovers worldwide.</P>
             <P>Our beans are ethically sourced from the lush plantations of the Western Ghats, where experienced farmers have perfected the art of coffee growing for generations. Meticulously roasted to perfection, each cup embodies the deep heritage and vibrant spirit of Kerala.</P>
             <P>Whether you prefer a bold brew or a smooth, aromatic cup, Malayalis Coffee Company offers an unparalleled coffee experience that celebrates tradition, quality, and the unique taste of Kerala. Sip, savor, and enjoy – every cup tells a story.</P>
           </div>
@@ -110,7 +110,7 @@
 
     <!-- coffee-products -->
 
-    <section id="product" class="conrainer-fluid" style="height: 80vh;">
+    <section class="container-fluid" style="height: 80vh;">
       <div class="coffee-product row d-flex justify-content-center mx-auto">
         <div class="product-main row d-flex justify-content-center align-items-center">
           <h1 class="review text-center" style="color: #3e362e; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); text-shadow: 2px 2px 4px rgba(225, 216, 216, 0.5); inset: 10px 10px -15px #ffff;">Products</h1>
@@ -158,7 +158,7 @@
 
     <!-- coffee-services -->
 
-    <section id="services" class="conrainer-fluid">
+    <section class="container-fluid">
       <div class="coffee-services row d-flex justify-content-center mx-auto">
         <div class="service-main row d-flex justify-content-center align-items-center">
           <h1 class="review text-center" style="color: #3e362e; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Services</h1>
@@ -213,7 +213,7 @@
 
     <!-- coffee-gallery -->
 
-    <section id="gallery" class="container-fluid">
+    <section class="container-fluid">
       <div class="container mx-auto text-center">
         <h1 style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); margin: 50px;">An Album of Aromatic Memories</h1>
         <p class="about-p py-2">
@@ -221,9 +221,9 @@
           imagery. From the first crack of the beans to the final pour, each
           photo tells a story of passion, craftsmanship, and the love for
           coffee. Dive into the visual journey of coffee cultivation, roasting,
-          brewing, and savoring. Whether you're a coffee connoisseur or simply
+          brewing, and savouring. Whether you're a coffee connoisseur or simply
           enjoy a good cup, our album is sure to inspire and delight. Sip,
-          savor, and enjoy the rich tapestry of coffee culture through our
+          savour, and enjoy the rich tapestry of coffee culture through our
           beautiful image collection.
         </p>
       </div>
@@ -256,7 +256,7 @@
 
     <!-- coffee-contacts -->
 
-    <section id="contact" class="container-fluid pt-3">
+    <section class="container-fluid pt-3">
       <div class="pt-5 text-center" style="color: #3e362e; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);"><h1>Contact-Us</h1></div>
       <div class="d-md-flex contact-item">
         <div class="contact-input d-flex flex-column align-items-center justify-content-center m-2 mx-auto">
